# rust-echarts

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: echarts.rs  iso.rs  lib.rs
